projet-final/k8s/catalogue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue-svc
  namespace: boutique
  labels:
    app: catalogue
spec:
  type: ClusterIP
  selector:
    app: catalogue
  ports:
    - name: http
      port: 80
      targetPort: 3000
