projet-final/k8s/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: boutique
  labels:
    app: orders
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - name: http
      port: 80
      targetPort: 3000
